Initial version commit

--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -74,5 +74,5 @@ pythonpath = ["."]
 
 
 [tool.poetry.scripts]
-{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.__main__:main"
+"{{ cookiecutter.project_slug }}" = "{{ cookiecutter.project_slug }}.__main__:main"
 
